tdf#135799: properly load arrays in user-defined types from image

This requires to reset Fixed flag temporarily, as in SbiParser::DefType
for non-image case.

And save the dimensions of the arrays in the custom types correctly:
the dimensions are numbered from 1, not from 0.

The existing unit test (that happened to not test anything actually)
was fixed.

Change-Id: I48c6b6d5d735d9972a2c0dd40345d5db75f87f39